# clipopedia

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-live.txt  requirements.txt
.github/workflows/: ci.yml
data/: entities.example.json
deploy/: HF_SPACE.md  README.md  ecs-task-definition.json
docs/: ARCHITECTURE.md  DESIGN.md  RAG_PIPELINE.md
evals/: retrieval_eval.py
src/clipopedia/: __init__.py  __main__.py  bot.py  cli.py  config.py  dateutils.py  factory.py  jsonparse.py  logging_setup.py  models.py  ports.py  textutils.py
src/clipopedia/adapters/: __init__.py  bm25_encoder.py  cohere_reranker.py  gemini_llm.py  memory.py  openai_embedder.py  pinecone_store.py  postgres_store.py  s3_media.py  sqs_source.py  throttle.py  twitter_client.py
src/clipopedia/demo/: __init__.py  corpus.py  run.py
src/clipopedia/orchestration/: __init__.py  graph.py  nodes.py  response.py  state.py
src/clipopedia/retrieval/: __init__.py  fusion.py  gazetteer.py  hyde.py  pipeline.py  query_analysis.py  scoring.py  selection.py  time_planning.py
tests/: test_fusion.py  test_gazetteer.py  test_hyde.py  test_jsonparse.py  test_nodes.py  test_pipeline.py  test_scoring.py  test_time_planning.py
